WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276160
Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following
280586@main
https://bugs.webkit.org/show_bug.cgi?id=276160
Summary
Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following 280586@main
Ross Kirsling
Reported
2024-07-02 18:39:07 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2024-07-02 18:42:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30422
EWS
Comment 2
2024-07-02 18:46:15 PDT
Committed
280606@main
(0934c9bbd1e6): <
https://commits.webkit.org/280606@main
> Reviewed commits have been landed. Closing PR #30422 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-02 18:47:19 PDT
<
rdar://problem/131015532
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug