Fix !ENABLE(MODERN_MEDIA_CONTROLS) build following 280586@main https://bugs.webkit.org/show_bug.cgi?id=276160

Unreviewed PlayStation build fix.

* Source/WebCore/style/UserAgentStyle.cpp:
(WebCore::Style::UserAgentStyle::ensureDefaultStyleSheetsForElement):
Replace use of String::operator+ with makeString.

Canonical link: https://commits.webkit.org/280606@main